- 01: Enh. #255: Analyser now names the assumed loop variables if supernumerous <2>
- 02: Enh. #253: Refactoring option for loading diagrams (files ≥ 3.25-01) <2>
- 02: Enh. #253: Refactoring offer on changing parser preferences <2>
- 02: Enh. #253: Refactoring offer on loading preferences from file <2>
- 02: Enh. #257: Decomposing transmutation of CASE elements <2>

Version: 3.25 (2016.09.09)
- 01: Enh. #77: Test coverage mode highlights all code paths passed [elemhsb]2
- 01: Enh. #124: Generalized runtime data visualization <2>
- 01: Arranger now adopts current directory from first arranged diagram <2>
- 02: Bugfix #131: User activities during execution could compromise Executor <2>
- 02: Bugfix #132: Stale Structorizer references in Arranger caused trouble <2>
- 02: Enh. #133: Execution Call stack may now be inspected in paused state <2>
- 02: Enh. KGU#89: Executor: Extended language localization support <2>
- 03: Enh. #84/#135: For-In loops now consistently supported [R. Schmidt]<2>
- 03: Issue #79/#152: Requested Java version corrected (1.6 --> 1.8) <2>
- 04: Bugfix #96/#135: On BASH export conditions now put into [[ ]] [Rolf Schmidt]2
- 04: Bugfix #135/KGU#163: Detection of completely undefined variables <2>
- 04: Enh. #135: Improved array support on BASH export [Rolf Schmidt]2
- 04: Bugfix #138: Lvalues with nested indices like arr[arr[0]] had failed <2>
- 04: Bugfix #139: on BASH export Call instructions now converted <2>
- 05: Issue #135: Further improvements on BASH export [Rolf Schmidt] <2>
- 05: Enh. #142: New Accelerator keys (e.g. for switch text/comment) [Rolf Schmidt]2
- 05: Issue #143: Comment popups now close on editing and code export [Rolf Schmidt]2
- 05: Enh. #144: New export option to suppress content conversion <2>
- 05: Enh. #144: New "favourite code export" menu item (export preference) [Rolf Schmidt]2
- 05: Issue #145: Swapped text/comment now works on CASE and PARALLEL elements <2>